<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_movie_text"
                android:id="@+id/create_party_movie_text" />
            <Button
                android:id="@+id/create_party_movie_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_movie_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_invitees_text"
                android:id="@+id/create_party_invitees_text" />
            <Button
                android:id="@+id/create_party_invitees_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_invitees_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date_text"
                android:id="@+id/create_party_date_text" />
            <Button
                android:id="@+id/create_party_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_date_picker" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center" >
            <TextView
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_time_text"
                android:id="@+id/create_party_time_text" />
            <Button
                android:id="@+id/create_party_time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_time_picker" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>