<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/row_event_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/row_eventTitleText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/row_eventDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/row_event_title_text"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/row_eventAttendeeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/row_eventDateTextView"
        android:text="@string/row_eventAttendeeCountText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/row_editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/row_deleteButton"
        android:layout_toLeftOf="@+id/row_deleteButton"
        android:text="@string/row_editButtonText" />

    <Button
        android:id="@+id/row_deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/row_eventAttendeeCount"
        android:layout_alignParentRight="true"
        android:text="@string/row_deleteButtonText" />

</RelativeLayout>
